added media calls for top charts

--- a/css/main.css
+++ b/css/main.css
@@ -1003,7 +1003,7 @@ a.tooltip {outline:none; }
 	}
 
 	.main ul {
-		width: 920px;
+		width: 100%;
 		height: 112px;
 		margin: 486px 0 0;
 		padding: 0;
@@ -1014,7 +1014,7 @@ a.tooltip {outline:none; }
 		float: left;
 		position: relative;
 		z-index: 1;
-		width: 130px;
+		width: 21%;
 		height: 100%;
 		transition: z-index;
 		transition-delay: .8s;
@@ -1028,19 +1028,19 @@ a.tooltip {outline:none; }
 		left: 50%;
 		color: #384248;
 		font: 6em/1 'FontAwesome';
-		transform: translate(-75%, -40%);
+		transform: translate(15%, -40%);
 	}
 
 .main article {
     position: absolute;
     top: 50%;
-    left: 90%;
-    width: 500px;
-    height: 450px;
-    border: 1px solid #646c71;
+    left: 80%;
+    width: 450%;
+    height: 400%;
+    outline: 4px solid #646c71;
     background-color: #fff;
     cursor: pointer;
-    transform: translate(-60%, -48%) scale(.20);
+    transform: translate(-50%, -48%) scale(.20);
     transition: transform .8s;
     color: white;
     padding-top: 3%;
@@ -1052,9 +1052,9 @@ a.tooltip {outline:none; }
 
 	.main .area {
 		position: relative;
-		width: 535px;
-		height: 300px;
-        margin: 32px 40px 48px;
+		width: 85%;
+		height: 66.7%;
+        margin: 32px 64px 48px;
 		font-size: 1.1em;
 	}
 
@@ -1066,7 +1066,7 @@ a.tooltip {outline:none; }
 		left: 0;
 		right: 0;
 	    color: black;
-		width: 85%;	
+		width: 95%;	
 	}
 
 	.main .linez div {
@@ -1083,11 +1083,11 @@ a.tooltip {outline:none; }
 		display: block;
 		position: absolute;
 		top: -10px;
-		left: -40px;
+		left: -50px;
 		width: 40px;
 		padding-right: 8px;
 		text-align: right;
-	  color: black;
+		color: black;
 	}
 
 	.main .data {
@@ -1096,14 +1096,14 @@ a.tooltip {outline:none; }
 		bottom: 0;
 		left: 0;
 		right: 0;
-	   color: black;
-       margin-left: -15px;
+		color: black;
+		margin-left: -15px;
 	}
 
 	.main dl {
 		float: left;
 		position: relative;
-		width: 65px;
+		width: 15%;
 		height: 300px;
 		margin: 0;
 		text-align: center;
@@ -1417,7 +1417,7 @@ a.tooltip {outline:none; }
 	}
 
 	.main_sale ul {
-		width: 920px;
+		width: 100%;
 		height: 112px;
 		margin: 486px 0 0;
 		padding: 0;
@@ -1428,7 +1428,7 @@ a.tooltip {outline:none; }
 		float: left;
 		position: relative;
 		z-index: 1;
-		width: 130px;
+		width: 21%;
 		height: 100%;
 		transition: z-index;
 		transition-delay: .8s;
@@ -1442,19 +1442,19 @@ a.tooltip {outline:none; }
 		left: 50%;
 		color: #384248;
 		font: 6em/1 'FontAwesome';
-		transform: translate(-75%, -40%);
+		transform: translate(15%, -40%);
 	}
 
 .main_sale article {
     position: absolute;
     top: 50%;
     left: 90%;
-    width: 500px;
-    height: 450px;
-    border: 1px solid #646c71;
+    width: 450%;
+    height: 400%;
+    outline: 4px solid #646c71;
     background-color: #fff;
     cursor: pointer;
-    transform: translate(-60%, -48%) scale(.20);
+    transform: translate(-50%, -48%) scale(.20);
     transition: transform .8s;
     color: white;
     padding-top: 3%;
@@ -1466,9 +1466,9 @@ a.tooltip {outline:none; }
 
 	.main_sale .area {
 		position: relative;
-		width: 535px;
-		height: 300px;
-        margin: 32px 40px 48px;
+		width: 85%;
+		height: 66.7%;
+        margin: 32px 64px 48px;
 		font-size: 1.1em;
 	}
 
@@ -1481,7 +1481,7 @@ a.tooltip {outline:none; }
        left: 0;
        right: 0;
        color: black;
-       width: 85%;    
+       width: 95%;    
    }
 
    .main_sale .linez div {
@@ -1498,7 +1498,7 @@ a.tooltip {outline:none; }
        display: block;
        position: absolute;
        top: -10px;
-       left: -40px;
+       left: -50px;
        width: 40px;
        padding-right: 8px;
        text-align: right;
@@ -1518,7 +1518,7 @@ a.tooltip {outline:none; }
 	.main_sale dl {
 		float: left;
 		position: relative;
-		width: 65px;
+		width: 15%;
 		height: 300px;
 		margin: 0;
 		text-align: center;
@@ -1695,7 +1695,7 @@ a.tooltip {outline:none; }
 	}
 
 	.main_sale li:nth-child(1).active article {
-		transform: translate(-114px, -542px) scale(1);
+		transform: translate(-124px, -542px) scale(1);
 	}
 	.main_sale li:nth-child(2).active article {
 		transform: translate(-244px, -542px) scale(1);
@@ -1771,7 +1771,7 @@ a.tooltip {outline:none; }
 
 /*Media Query - Smartphone layout */
 
-@media only screen and (max-width: 500px){
+@media all and (max-width: 500px){
     body {
         width:100%;
         float:left;
@@ -1823,4 +1823,65 @@ a.tooltip {outline:none; }
     margin-left: 5% !important;
     margin-bottom: 2%;
     }
+	.main .area {
+	margin: 28px 45px 48px;}
+}
+
+@media only screen and (max-width:1600px){
+
+.main li:nth-child(1).active article {
+		transform: translate(-91px, -542px) scale(1);
+	}
+.main_sale li:nth-child(1).active article {
+		transform: translate(-99px, -542px) scale(1);
+	}
+}
+
+@media only screen and (max-width:1235px){
+
+.main li:nth-child(1).active article {
+		transform: translate(-78px, -542px) scale(1);
+	}
+.main_sale li:nth-child(1).active article {
+		transform: translate(-83px, -542px) scale(1);
+	}
+}
+
+@media only screen and (max-width:1060px){
+
+.main li:nth-child(1).active article {
+		transform: translate(-67px, -542px) scale(1);
+	}
+.main_sale li:nth-child(1).active article {
+		transform: translate(-76px, -542px) scale(1);
+	}
+	dq {
+    float: left;
+    position: relative;
+		width: 29px;}
+}
+
+@media only screen and (max-width:960px){
+
+.main li:nth-child(1).active article {
+		transform: translate(-67px, -542px) scale(1);
+	}
+.main_sale li:nth-child(1).active article {
+		transform: translate(-76px, -542px) scale(1);
+	}
+	dq {
+    float: left;
+    position: relative;
+		width: 19px;}
+}
+@media only screen and (max-width:620px){
+
+.main li:nth-child(1).active article {
+		transform: translate(-50px, -542px) scale(1);
+	}
+.main_sale li:nth-child(1).active article {
+		transform: translate(-54px, -542px) scale(1);
+	}
+.main .area, .main_sale .area {
+	margin: 28px 45px 48px;}
 }
