--- a/css/main.css
+++ b/css/main.css
@@ -641,7 +641,7 @@ canvas {
     font-weight: bold;
     color:white;
     background: #4e4b5c;
-    top: 550px;
+    top: 41%;
     left: 175px;
     font-family: 'Open Sans',sans-serif;
     z-index: 0;
@@ -659,7 +659,7 @@ canvas {
     font-weight: bold;
     color:white;
     background: #4e4b5c;
-    top: 550px;
+    top: 41%;
     left: 260px;
     font-family: 'Open Sans',sans-serif;
     z-index: 0;
@@ -677,7 +677,7 @@ canvas {
     font-weight: bold;
     color:white;
     background: #4e4b5c;
-    top: 550px;
+    top: 41%;
     left: 345px;
     font-family: 'Open Sans',sans-serif;
     z-index: 0;
@@ -696,7 +696,7 @@ canvas {
     font-weight: bold;
     color:white;
     background: #4e4b5c;
-    top: 550px;
+    top: 41%;
     right: 390px;
     font-family: 'Open Sans',sans-serif;
     z-index: 0;
@@ -714,7 +714,7 @@ canvas {
     font-weight: bold;
     color:white;
     background: #4e4b5c;
-    top: 550px;
+    top: 41%;
     right: 310px;
     font-family: 'Open Sans',sans-serif;
     z-index: 0;
@@ -732,7 +732,7 @@ canvas {
     font-weight: bold;
     color:white;
     background: #4e4b5c;
-    top: 550px;
+    top: 41%;
     right: 225px;
     font-family: 'Open Sans',sans-serif;
     z-index: 0;
@@ -750,7 +750,7 @@ canvas {
     font-weight: bold;
     color:white;
     background: #4e4b5c;
-    top: 550px;
+    top: 41%;
     right: 140px;
     font-family: 'Open Sans',sans-serif;
     z-index: 0;
@@ -1198,19 +1198,24 @@ a.tooltip {outline:none; }
     
     .banner h1 {
         font-size: 19px;
-        float: right;
+        float: left;
         text-align: center;
         margin-left: 0;
-        margin-right:1%;
-        line-height: 1.5;
+        margin-right:0%;
         color: #4E4B5C;
         height: 40px;
+        width:100%;
+        margin-top:2%;
     }
     
+    
     #joyridebutton {
-        margin-top: -7%;
+        margin-top: -5%;
         font-size:13px;
-        margin-right: 35%;
+        float:left;
+        position:relative;
+        margin-left:40%;
+        margin-bottom:2%
 }
     
     .lines {
@@ -1252,6 +1257,7 @@ a.tooltip {outline:none; }
     margin-left: 5% !important;
     margin-bottom: 2%;
 }
+     
     
     .update-date {
 	font-size:10px;
@@ -1276,7 +1282,7 @@ a.tooltip {outline:none; }
     position: absolute;
     font-size: 12px;
     font-weight: bold;
-    top: 463px;
+    top: 19.5%;
     left: 78px;
     font-family: 'Open Sans',sans-serif;
 }
@@ -1286,7 +1292,7 @@ a.tooltip {outline:none; }
     position: absolute;
     font-size: 12px;
     font-weight: bold;
-    top: 463px;
+    top: 19.5%;
     left: 160px;
     font-family: 'Open Sans',sans-serif;
 }
@@ -1296,28 +1302,31 @@ a.tooltip {outline:none; }
     position: absolute;
     font-size: 12px;
     font-weight: bold;
-    top: 463px;
+    top: 19.5%;
     left: 245px;
     font-family: 'Open Sans',sans-serif;
 }
     
 .dummies_visitor_button {
-	top:878px;
-    right:290px;
+	top:37.5%;
+    left:5%;
 }
 
 .wel_visitor_button {
-	top:878px;
-    right:205px
+    top: 37.5%;
+    left: 26%;
 }
     
 .wp_visitor_button {
-	top:878px;
-    left:205px;
+	top:37.5%;
+    left:47%;
 }    
 
 .wpls_visitor_button {
-	top:878px;
-    left:285px;
-}    
+	top:37.5%;
+    left:67%;
+}
+    .unslider-nav ol {
+        margin-left:-8%;
+    }    
 }
